--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,7 +36,7 @@
         "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/no-unused-vars": [
           "warn",
-          { "argsIgnorePattern": "^_" }
+          { "argsIgnorePattern": "^_", "varsIgnorePattern": "^_" }
         ],
         "@typescript-eslint/naming-convention": [
           "error",
